# StochasticForceInference

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GALLERY_STYLE_GUIDE.md  LICENSE  MANIFEST.in  README  README.md  Readme.md  SFI_bases.py  SFI_data.py  SFI_demo.py  SFI_demo_Lorenz.py  SFI_demo_particles.py  SFI_diffusion.py  SFI_forces.py  SFI_inference.py  SFI_langevin.py  SFI_plotting_toolkit.py  SFI_projectors.py  StochasticForceInference.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: agent_docs.yml
OLI_examples/ActiveBrownianParticles/: ABP_model.py  ABP_simulate.py  OLI_demo_ABP.py
OLI_examples/Lorenz/: Lorenz_model.py  Lorenz_simulate.py  OLI_demo_Lorenz.py
OLI_examples/Lotka-Volterra/: LV_model.py  LV_simulate.py  OLI_demo_LV.py
SFI/: OLI_bases.py  OLI_inference.py  SFI_Langevin.py  SFI_base_inference.py  SFI_data.py  SFI_plotting_toolkit.py  SFI_sparsity.py  SFI_utils.py  ULI_bases.py  ULI_inference.py  __init__.py
SFI/bases/: __init__.py  constants.py  linear.py  monomials.py  pairs.py  spde.py
SFI/diagnostics/: __init__.py  assess.py  dynamics_order.py  plotting.py  report.py  residual_tests.py  residuals.py
SFI/inference/: __init__.py  base.py  optimizers.py  overdamped.py  result.py  serialization.py  sparsity.py  underdamped.py
SFI/integrate/: __init__.py  api.py  integrand.py  rk4.py  timeops.py
SFI/langevin/: __init__.py  base.py  chunked.py  noise.py  overdamped.py  underdamped.py
SFI/statefunc/: __init__.py  basis.py  factory.py  interactor.py  memhint.py  params.py  psf.py  sf.py  stateexpr.py  structexpr.py
SFI/trajectory/: __init__.py  collection.py  dataset.py  degrade.py  io.py  reserved_extras.py
SFI/utils/: __init__.py  formatting.py  maths.py  neighbors.py  plotting.py
ULI_examples/DampedHarmonicOscillator/: DH_model.py  DH_simulate.py  ULI_demo_DH.py
ULI_examples/Flocking/: Flocking_model.py  Flocking_simulate.py  ULI_demo_Flocking.py
ULI_examples/Van der Pol/: ULI_demo_VdP.py  VdP_model.py  VdP_simulate.py
_project_index/: api_map.json  api_map.md
docs/: Makefile  generate_thumbnails.py  regenerate_notebooks.py
docs/source/: api_frontend.rst  conf.py  dev_notes.rst  diagnostics.rst  glossary.rst  index.rst  install.rst  physics_reference.rst  sg_execution_times.rst  start_here.rst  whatsnew.rst
examples/: sfi_gallery.mplstyle
examples/_gallery_utils/: __init__.py  abp.py  bench_utils.py  coarse_grain.py  helpers.py  scenario_picker.py
examples/experimental_data/: _analyze_results.py  _expanded_basis.py  generate_tweezer_csv.py  optical_tweezer.csv
examples/gallery/: GALLERY_HEADER.rst  abp_align_demo.py  abp_nonreciprocal_demo.py  lorenz_demo.py  (+14 more)
scripts/: __init__.py  check_missing_cells.py  diagnose_nan_cells.py  gen_api_map.py  gen_parametric_goldens.py  render_rk4_decision.py  rk4_decision_summary.py  rk4_decision_sweep.py  tag_historical_notes.py
tests/: README.md  _abp_helpers.py  conftest.py  smoke_abp_multi.py  smoke_dw.py  test_dual_mask.py  test_parametric_mask.py  test_parametric_mask_abp.py  test_same_particle_jacobian.py
(+323 files in other folders)
